--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "rocketseat-bonus-redux",
+  "name": "bonusredux",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.62",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "axios": "^0.27.2",
-    "immer": "^9.0.15",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "7.2.1",
-    "react-scripts": "5.0.1",
-    "redux": "4.0.5",
-    "redux-devtools-extension": "^2.13.9",
-    "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "axios": "^0.20.0",
+    "immer": "^7.0.7",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
+    "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
+    "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,10 +29,7 @@
     "server": "json-server server.json -p 3333"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -47,7 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.24",
-    "json-server": "^0.17.0"
+    "@types/react-redux": "^7.1.9",
+    "json-server": "^0.16.1"
   }
 }
